2003-06-10  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added "zh_TW" to ALL_LINGUAS.

2003-06-09  Rodrigo Moya <rodrigo@gnome-db.org>

	* doc/C/libgda-docs.sgml:
	* doc/C/tmpl/gda-report-*.sgml: added missing libgda-report files.

2003-06-08  Rodrigo Moya <rodrigo@gnome-db.org>

	Released 0.12.1

2003-06-03  David T Hollis <dhollis@davehollis.com>

	* libgda.spec.in: fixed normal and build requirements.

2003-06-03  Steve Fosdick  <gnomedb@pelvoux.demon.co.uk>

	* Oracle Provider - fixed a statement handle leak which caused
	Oracle to run out of cursors.

2003-05-28  Rodrigo Moya <rodrigo@gnome-db.org>

	Released 0.12.0

2003-05-28  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

2003-05-26  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-parameter.[ch] (gda_parameter_new_boolean):
	(gda_parameter_new_double): new functions.

	* configure.in: upped version numbers.

2003-05-13  Xabier Rodríguez Calvar <xrcalvar@igalia.com>

	* doc/C: some changes to make it more solid

	* libgda/gda-row.*: introduced G_CONST_RETURN in
	gda_row_get_value() to have the const in the doc but not in the
	real version

	* libgda/gda-parameter.*: removed gda_parameter_new(), adding
	gda_parameter_new_from_value() to make the API more solid and
	removed some checkings for null because they were not necessary.

2003-05-12 Sergey N. Belinsky <sergey_be@mail.ru>

	* gda-ibmdb2-provider.c:
	* gda-ibmdb2-recordset.c:
	* gda-ibmdb2-types.c: fix for compile problem.

2003-05-10  Danilo Schoeneberg <dj@starfire-programming.net>

	* configure.in:
	* providers/Makefile.am:
	* providers/msql/*: first version of mSQL provider.

2003-05-08  C.J. Collier <cjcollier@colliertech.org>

	* doc/C/libgda-docs.sgml: removed extra space in hyperlinks, some
	English corrections, and wrapped shell commands in <PROGRAMLISTING>
	tags to follow the common style.

2003-04-27  Steve Fosdick  <gnomedb@pelvoux.demon.co.uk>
